# synesis

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pyproject.toml
config/: synesis.yaml
scripts/: background-sync.sh
src/: cli.ts  index.ts
src/auth/: index.ts  oauth.ts  providers.ts  store.ts  types.ts
src/config/: index.ts
src/connectors/: base.ts  chatgpt.ts  claude-ai.ts  claude-code.ts  gmail.ts  index.ts
src/extractor/: index.ts
src/kb/: compactor.ts  index.ts  search.ts  store.ts  types.ts
src/mcp/: server.ts
src/sync/: index.ts
synesis/: __init__.py  cli.py
synesis/agent/: __init__.py  learner.py  optimizer.py
synesis/auth/: __init__.py  oauth.py  providers.py  store.py
synesis/config/: __init__.py  manager.py
synesis/connectors/: __init__.py  base.py  chatgpt.py  claude_ai.py  claude_code.py  gmail.py
synesis/extractor/: __init__.py  extractor.py
synesis/kb/: __init__.py  compactor.py  search.py  store.py  types.py
synesis/mcp/: server.py
synesis/ml/: __init__.py  consolidator.py  contradictions.py  conversation_index.py  embeddings.py  feedback.py  metrics.py  retriever.py  reward_model.py  scorer.py  staleness.py  trainer.py
synesis/sync/: __init__.py  engine.py
synesis/web/: app.py
synesis/web/templates/: index.html
